--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ vserion: 2.1
 jobs:
   test:
     docker:
-      - image: cimg/node:14.13.0
+      - image: cimg/node:19.0.0
     steps:
       - checkout
       - run: node --version
@@ -12,7 +12,6 @@ workflows:
   test-deploy:
     jobs:
       - test
-      
 # version: 2.1
 # orbs:
 #   sonarcloud: sonarsource/sonarcloud@1.1.0
@@ -48,4 +47,4 @@ workflows:
 #       - build:
 #           context: sonarcloud
 
-# # VS Code Extension Version: 1.0.2
+# VS Code Extension Version: 1.0.2
