--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
 
   upload_artifact:
     docker:
-      - image: cimg/openjdk:17.0
+      - image: cimg/node:19.0.0
         # auth:
         #   username: mydockerhub-user
         #   password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
