changing jfrog cmd

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,10 @@ jobs:
       - run:
           name: Push to Artifactory
           command: |
-            - ./jfrog rt config --url $ARTIFACTORY_URL --user $ARTIFACTORY_USER --apikey $ARTIFACTORY_PASSWORD
-            - ./jfrog rt u android/app/release app-release.apk --build-name=demo_build --build-number=1.0.0
-            - ./jfrog rt bce demo_build 1.0.0  # collects all environment variables on the agent
-            - ./jfrog rt bp demo_build 1.0.0  # attaches ^^ to the build in artifactory
+            - jfrog rt config --url $ARTIFACTORY_URL --user $ARTIFACTORY_USER --apikey $ARTIFACTORY_PASSWORD
+            - jfrog rt u android/app/release app-release.apk --build-name=demo_build --build-number=1.0.0
+            - jfrog rt bce demo_build 1.0.0  # collects all environment variables on the agent
+            - jfrog rt bp demo_build 1.0.0  # attaches ^^ to the build in artifactory
 
 workflows:
   test-deploy:
