remove add serverid

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           name: Setup JFrog
           command: |
             sudo npm install -g jfrog-cli-go --unsafe-perm=true --allow-root
-            jfrog config add --url $ARTIFACTORY_URL --user $ARTIFACTORY_USER --apikey $ARTIFACTORY_PASSWORD --interactive=false
+            jfrog rt config --url $ARTIFACTORY_URL --user $ARTIFACTORY_USER --apikey $ARTIFACTORY_PASSWORD --interactive=false
             jfrog rt u android/app/release app-release.apk --build-name=demo_build --build-number=1.0.0
             jfrog rt bce demo_build 1.0.0
             jfrog rt bp demo_build 1.0.0
@@ -44,7 +44,6 @@ jobs:
 workflows:
   test-deploy:
     jobs:
-      - test
       - upload_artifact
 # version: 2.1
 # orbs:
