changed jfrog instllation cmd

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
       - run:
           name: Setup JFrog
           command: |
-            sudo npm install -g jfrog-cli-go --unsafe-perm=true --allow-root
-            jfrog rt config --url $ARTIFACTORY_URL --user $ARTIFACTORY_USER --apikey $ARTIFACTORY_PASSWORD --interactive=false
+            curl -fL https://getcli.jfrog.io | sh
+            jfrog rt config --url $ARTIFACTORY_URL --user $ARTIFACTORY_USER --apikey $ARTIFACTORY_PASSWORD
             jfrog rt u android/app/release app-release.apk --build-name=demo_build --build-number=1.0.0
             jfrog rt bce demo_build 1.0.0
             jfrog rt bp demo_build 1.0.0
