--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
             sudo npm install -g jfrog-cli-go --unsafe-perm=true --allow-root
             jfrog rt config --url $ARTIFACTORY_URL --user $ARTIFACTORY_USERNAME --password $ARTIFACTORY_PASSWORD --interactive=false --enc-password=false
             jfrog --version
+            jfrog rt u android/app/release app-release.apk --build-name=demo_build --build-number=1.0.0
+            
       # - run:
       #     name: Install JFrog CLI
       #     command: sudo npm install -g --unsafe-perm=true --allow-root
