--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           name: Upload JFrog
           command: |
              jfrog --version
-             jfrog rt u "android/app/release/app-release.apk" --build-name=demo_build --build-number=1.0.0  --flat=false    
+             jfrog rt u "android/app/release/app-release.apk" demosonarqube-generic-local/  
             
       # - run:
       #     name: Install JFrog CLI
