--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           name: Upload JFrog
           command: |
              jfrog --version
-             jfrog rt u "android/app/release/app-release.apk" demosonarqube-generic-local/{1}/ --recursive=false
+             jfrog rt u "android/app/release/app-release.apk" demosonarqube-generic-local/ --url $ARTIFACTORY_URL --user $ARTIFACTORY_USERNAME --password $ARTIFACTORY_PASSWORD  --flat=false    
             
       # - run:
       #     name: Install JFrog CLI
