--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -51,3 +51,9 @@ expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
+
+# Jfrog artifactory credentials
+currentVersion=1.0-SNAPSHOT
+artifactory_user=hemantaswn@gmail.com
+artifactory_password=Shivapal251@
+artifactory_contextUrl=https://hemantaswn.jfrog.io/artifactory
