--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,4 @@
+include ':app', ':library'
 rootProject.name = 'DemoSonarqube'
 
 apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
