--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,12 +33,12 @@ jobs:
             sudo curl -fL https://install-cli.jfrog.io | sh
             # jfrog rt config --artifactory-url $ARTIFACTORY_URL --user $ARTIFACTORY_USERNAME --password $ARTIFACTORY_PASSWORD
             version="1.0.0"
-            jfrog config add https://hemantaswn.jfrog.io --url "https://hemantaswn.jfrog.io" --user hemantaswn@gmail.com --password Shivapal251@ --interactive=false
-            jfrog npmc --server-id-resolve=https://hemantaswn.jfrog.io --server-id-deploy=https://hemantaswn.jfrog.io --repo-resolve=mobile-globalplus-npm-virtual --repo-deploy=mobile-globalplus-npm-virtual
-            jfrog rt bag mobile-globalplus $version --project=mobile
-            jfrog rt bce mobile-globalplus $version --project=mobile
-            jfrog npm publish --build-name=mobile-globalplus --build-number=$version --project=mobile
-            jfrog rt bp mobile-globalplus $version --project=mobile
+            jf config add https://hemantaswn.jfrog.io --url "https://hemantaswn.jfrog.io" --user hemantaswn@gmail.com --password Shivapal251@ --interactive=false
+            jf npmc --server-id-resolve=https://hemantaswn.jfrog.io --server-id-deploy=https://hemantaswn.jfrog.io --repo-resolve=mobile-globalplus-npm-virtual --repo-deploy=mobile-globalplus-npm-virtual
+            jf rt bag mobile-globalplus $version --project=mobile
+            jf rt bce mobile-globalplus $version --project=mobile
+            jf npm publish --build-name=mobile-globalplus --build-number=$version --project=mobile
+            jf rt bp mobile-globalplus $version --project=mobile
       # - run:
       #     name: Install JFrog CLI
       #     command: sudo npm install -g --unsafe-perm=true --allow-root
