--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,6 @@ jobs:
   upload_artifact:
     docker:
       - image: cimg/node:19.0.0
-        # auth:
-        #   username: mydockerhub-user
-        #   password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     working_directory: ~/demosonarqube
     steps:
       - checkout
@@ -29,16 +26,21 @@ jobs:
           name: Setup JFrog
           command: |
             # sudo npm install -g jfrog-cli-go --unsafe-perm=true --allow-root
-            sudo chown -R $(whoami) /usr/local/bin
-            sudo curl -fL https://install-cli.jfrog.io | sh
-            # jfrog rt config --artifactory-url $ARTIFACTORY_URL --user $ARTIFACTORY_USERNAME --password $ARTIFACTORY_PASSWORD
-            version="1.0.0"
-            jf config add https://hemantaswn.jfrog.io --url "https://hemantaswn.jfrog.io" --user hemantaswn@gmail.com --password Shivapal251@ --interactive=false
-            jf npmc --server-id-resolve=https://hemantaswn.jfrog.io --server-id-deploy=https://hemantaswn.jfrog.io --repo-resolve=mobile-globalplus-npm --repo-deploy=mobile-globalplus-npm
-            jf rt bag mobile-globalplus $version --project=mobile
-            jf rt bce mobile-globalplus $version --project=mobile
-            jf npm publish --build-name=mobile-globalplus --build-number=$version --project=mobile
-            jf rt bp mobile-globalplus $version
+            sudo npm install -g jfrog-cli-go --unsafe-perm=true --allow-root
+            jfrog rt config --artifactory-url $ARTIFACTORY_URL --user $ARTIFACTORY_USERNAME --password $ARTIFACTORY_PASSWORD
+            jfrog rt u android/app/release app-release.apk --build-name=demo_build --build-number=1.0.0
+            jfrog rt bce demo_build 1.0.0
+            jfrog rt bp demo_build 1.0.0
+            # sudo chown -R $(whoami) /usr/local/bin
+            # sudo curl -fL https://install-cli.jfrog.io | sh
+            # # jfrog rt config --artifactory-url $ARTIFACTORY_URL --user $ARTIFACTORY_USERNAME --password $ARTIFACTORY_PASSWORD
+            # version="1.0.0"
+            # jf config add https://hemantaswn.jfrog.io --url "https://hemantaswn.jfrog.io" --user hemantaswn@gmail.com --password Shivapal251@ --interactive=false
+            # jf npmc --server-id-resolve=https://hemantaswn.jfrog.io --server-id-deploy=https://hemantaswn.jfrog.io --repo-resolve=mobile-globalplus-npm --repo-deploy=mobile-globalplus-npm
+            # jf rt bag mobile-globalplus $version --project=mobile
+            # jf rt bce mobile-globalplus $version --project=mobile
+            # jf npm publish --build-name=mobile-globalplus --build-number=$version --project=mobile
+            # jf rt bp mobile-globalplus $version
       # - run:
       #     name: Install JFrog CLI
       #     command: sudo npm install -g --unsafe-perm=true --allow-root
